[gd_scene load_steps=8 format=3 uid="uid://crpqhi624ube6"]

[ext_resource type="Script" uid="uid://dcjil7fo4uaxx" path="res://Assets/Scenes/UI/pause_menu.gd" id="1_0e56k"]
[ext_resource type="Texture2D" uid="uid://bct88rnjlbsu6" path="res://Assets/Sprites/resume.png" id="2_wj3ic"]
[ext_resource type="Texture2D" uid="uid://dll04m7l0auug" path="res://Assets/Sprites/resumehover.png" id="3_4urwe"]
[ext_resource type="Texture2D" uid="uid://mpysn16g7nht" path="res://Assets/Sprites/retry.png" id="4_8cp7m"]
[ext_resource type="Texture2D" uid="uid://hflyicc8nwm" path="res://Assets/Sprites/retryhover.png" id="5_23a6d"]
[ext_resource type="Texture2D" uid="uid://e0u54wphosfb" path="res://Assets/Sprites/menu.png" id="6_c2ufq"]
[ext_resource type="Texture2D" uid="uid://dv2wo26mo04fw" path="res://Assets/Sprites/menuhover.png" id="7_clw5t"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0e56k")

[node name="Resume" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.35
anchor_right = 0.5
anchor_bottom = 0.35
offset_left = -104.0
offset_top = -47.5
offset_right = 88.0
offset_bottom = 18.5
grow_horizontal = 2
texture_normal = ExtResource("2_wj3ic")
texture_hover = ExtResource("3_4urwe")
ignore_texture_size = true

[node name="Retry" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -18.550003
offset_right = 96.0
offset_bottom = 47.449997
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_8cp7m")
texture_hover = ExtResource("5_23a6d")
ignore_texture_size = true

[node name="Menu" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.65
anchor_right = 0.5
anchor_bottom = 0.65
offset_left = -104.0
offset_top = 10.400009
offset_right = 96.0
offset_bottom = 76.400024
grow_horizontal = 2
texture_normal = ExtResource("6_c2ufq")
texture_hover = ExtResource("7_clw5t")
ignore_texture_size = true

[connection signal="button_down" from="Resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="Retry" to="." method="_on_retry_button_down"]
[connection signal="button_down" from="Menu" to="." method="_on_main_menu_button_down"]
